--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,10 @@
   margin: 0 auto;
   display: flex;
   justify-content: space-around;
+  background-color: #0b5402;
+  color: white;
+  border-radius: 0.5rem;
+  border: 4px solid #aaaaaa;
 }
 
 .homeButtons__touchdown,
@@ -119,4 +123,10 @@
 .awayButtons__fieldGoal {
   margin: 1rem;
   border-radius: 4px;
+}
+
+.resetButton {
+  height: 100px;
+  border-radius: 4px;
+  margin: 10px; 
 }
